--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <div class="container">
     <input type="text" id="task" placeholder="Enter your task" />
-    <button id="btn">Add task</button>
+    <button id="btnAdd">Add task</button>
+    <button id="btnDel">Del task</button>
   </div>
+  <ul id="tasks">
+  </ul>
 </body>
 </html>
